# MineProductivity

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  quality.yml  release.yml  security.yml
benchmark/: README.md
benchmark/expected_outputs/: README.md
benchmark/reports/: README.md
benchmark/scenarios/: README.md
certification/: README.md
certification/golden_datasets/: README.md
certification/reference_outputs/: README.md
certification/validation/: README.md
datasets/: README.md
datasets/benchmark/: README.md
datasets/canonical/: README.md
datasets/edge_cases/: README.md
datasets/golden/: README.md
datasets/processed/: README.md
datasets/raw/: README.md
datasets/synthetic/: README.md
docs/: HANDOFF_TO_OPUS.md  README.md  index.md
docs/adr/: ADR-0006-Analytics-Engine.md  ADR-0007-Decision-Intelligence.md  ADR-0008-Digital-Twin.md  ADR-0009-Simulation.md  ADR-0010-Optimization.md  ADR-0011-AI-Agents.md  ADR-0012-Visualization.md  ADR-0013-Placeholder-Package-Rationalization.md  index.md  why.txt
docs/api/: README.md
docs/api-reference/: agents.md  analytics.md  connectors.md  core.md  decision.md  digital_twin.md  events.md  index.md  kpis.md  ontology.md  optimization.md  plugins.md  registry.md  simulation.md  visualization.md
docs/architecture/: 01_Event_Framework_Design_Specification.md  02_Ontology_Framework_Design_Specification.md  03_Registry_Framework_Design_Specification.md  04_Connector_Framework_Design_Specification.md  05_KPI_Engine_Design_Specification.md  06_Analytics_Engine_Design_Specification.md  07_Decision_Intelligence_Design_Specification.md  08_Digital_Twin_Design_Specification.md  09_Simulation_Design_Specification.md  10_Optimization_Design_Specification.md  11_AI_Agents_Design_Specification.md  12_Visualization_Design_Specification.md  README.md
docs/assets/: README.md
docs/benchmarks/: agents.md  decision.md  digital_twin.md  index.md  optimization.md  simulation.md  visualization.md
docs/certification/: 2.0-certification.md
docs/citation/: CITATION.md  MineProductivity.bib
docs/design/: 01_Event_Implementation_Checklist.md  02_Ontology_Implementation_Checklist.md  03_Registry_Implementation_Checklist.md  04_Connector_Implementation_Checklist.md  05_KPI_Implementation_Checklist.md  06_Analytics_Engine_Implementation_Checklist.md  07_Decision_Intelligence_Implementation_Checklist.md  08_Digital_Twin_Implementation_Checklist.md  09_Simulation_Implementation_Checklist.md  10_Optimization_Implementation_Checklist.md  11_AI_Agents_Implementation_Checklist.md  12_Visualization_Implementation_Checklist.md  README.md  why.txt
docs/developer_guide/: README.md
docs/getting-started/: installation.md  next-steps.md  quick-start.md
docs/governance/: CI_CD_GUIDE.md  ENGINEERING_RULES.md  RELEASE_CHECKLIST.md
docs/images/: README.md
docs/learning/: LEARNING_PROGRESS.md  LEARNING_ROADMAP.md  PACKAGE_TUTORIAL_IMPLEMENTATION_STANDARD.md
docs/learning_suite/: README.md
docs/project/: changelog.md  citation.md  code-of-conduct.md  contributing.md  roadmap.md  security.md
docs/reference_blueprint/: README.md
docs/release_notes/: why.txt
docs/releases/: LEARNING_SUITE_v1.0.md
docs/tutorials/: agents.md  connectors.md  core.md  decision.md  digital_twin.md  events.md  index.md  kpis.md  ontology.md  optimization.md  quickstart.md  registry.md  simulation.md  visualization.md
docs/user-guide/: index.md
examples/: README.md
examples/agents/: 01_single_agent_task.py  02_policy_gated_approval.py  03_multi_agent_workflow.py  04_hypothesis_and_plan_search.py  05_plugin_agent_and_tool.py  README.md
examples/ai/: README.md
examples/analytics/: 01_describe_and_distribution.py  02_trend.py  03_plugin_forecasting_model.py  README.md
examples/connectors/: 01_csv_ingestion.py  02_rest_with_retry.py  03_custom_connector.py  README.md
examples/core/: 01_entity_and_value_object.py  02_repository.py  03_factory_and_builder.py  04_validation.py  05_serialization.py  06_result_and_maybe.py  README.md
examples/decision/: 01_pipeline_over_evidence.py  02_action_planning.py  03_realtime_session.py  04_plugin_strategy.py  README.md  _evidence.py
examples/digital_twin/: 01_provision_and_sync.py  02_discovery.py  03_snapshot_and_serialize.py  04_plugin_twin_type.py  README.md
examples/events/: 01_first_event.py  02_replay.py  03_correction.py  README.md
examples/kpis/: 01_simple_execution.py  02_composite_oee.py  03_batch_summary.py  04_discovery.py  README.md  _dataset.py
examples/ontology/: 01_equipment_modelling.py  02_structural_modelling.py  03_validation.py  README.md
examples/optimization/: 01_mip_fleet_allocation.py  02_plan_comparison.py  03_sensitivity_sweep.py  04_candidate_scenario_search.py  05_plugin_solver_adapter.py  README.md
examples/plugins/: 01_manifest_and_lifecycle.py  02_activation_order.py  README.md
examples/production/: README.md
examples/quickstart/: 01_five_minute_tour.py  README.md
examples/registry/: 01_register_and_discover.py  02_version_compatibility.py  README.md
examples/simulation/: 01_monte_carlo_experiment.py  02_scenario_comparison.py  03_sensitivity_sweep.py  04_plugin_simulation_model.py  README.md
examples/visualization/: 01_single_widget_render.py  02_multi_source_dashboard.py  03_export_report.py  (+3 more)
notebooks/: README.md
scripts/: README.md
tests/: README.md
tests/fixtures/plugins/registry_fixture_broken/: pyproject.toml
tests/fixtures/plugins/registry_fixture_broken/mineproductivity_registry_fixture_broken/: __init__.py
tests/fixtures/plugins/registry_fixture_healthy/: pyproject.toml
tests/fixtures/plugins/registry_fixture_healthy/mineproductivity_registry_fixture_healthy/: __init__.py
(+728 files in other folders)
