[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineproductivity"
dynamic = ["version"]
description = "A metadata-first, ontology-driven, event-sourced platform for mining productivity intelligence."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "The MineProductivity Authors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/mineproductivity/MineProductivity"
Documentation = "https://github.com/mineproductivity/MineProductivity/tree/main/docs"
Repository = "https://github.com/mineproductivity/MineProductivity"
Changelog = "https://github.com/mineproductivity/MineProductivity/blob/main/CHANGELOG.md"
Issues = "https://github.com/mineproductivity/MineProductivity/issues"

[project.scripts]
mineproductivity = "mineproductivity.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mineproductivity"]

[tool.hatch.version]
path = "src/mineproductivity/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mineproductivity"]
