[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineproductivity"
dynamic = ["version"]
description = "A metadata-first, ontology-driven, event-sourced platform for mining productivity intelligence."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Manoj Kumar" },
]
keywords = [
    "mining",
    "productivity",
    "kpi",
    "analytics",
    "decision-intelligence",
    "digital-twin",
    "simulation",
    "ontology",
    "event-sourcing",
    "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
events = [
    "pyarrow>=14,<19",
]
connectors = [
    "openpyxl>=3.1,<4",
    "tzdata>=2024.1; sys_platform == 'win32'",
]
analytics = [
    "numpy>=1.26,<3",
    "pandas>=2,<3",
    "polars>=1,<2",
    "duckdb>=1,<2",
]
notebooks = [
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "pyarrow>=14,<19",
    "openpyxl>=3.1,<4",
    "tzdata>=2024.1; sys_platform == 'win32'",
    "numpy>=1.26,<3",
    "pandas>=2,<3",
    "polars>=1,<2",
    "duckdb>=1,<2",
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
    "nbclient>=0.10,<1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.26,<1",
    "mkdocs-include-markdown-plugin>=6,<8",
    "mkdocs-gen-files>=0.5,<1",
    "mkdocs-literate-nav>=0.6,<1",
    "pymdown-extensions>=10,<11",
]

[project.urls]
Homepage = "https://github.com/imanojkumar/MineProductivity"
Documentation = "https://github.com/imanojkumar/MineProductivity/tree/main/docs"
Repository = "https://github.com/imanojkumar/MineProductivity"
Changelog = "https://github.com/imanojkumar/MineProductivity/blob/main/CHANGELOG.md"
Issues = "https://github.com/imanojkumar/MineProductivity/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mineproductivity"]

[tool.hatch.version]
path = "src/mineproductivity/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mineproductivity"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mineproductivity_registry_fixture_healthy", "mineproductivity_registry_fixture_broken"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polars", "polars.*", "duckdb", "duckdb.*", "pandas", "pandas.*"]
ignore_missing_imports = true
