[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineproductivity-registry-fixture-broken"
version = "0.1.0"
description = "Registry Framework test fixture: a plugin that raises on import, proving discovery isolation."
requires-python = ">=3.12"
dependencies = []

[project.entry-points."mineproductivity.tests.registry_fixture"]
broken = "mineproductivity_registry_fixture_broken"

[tool.hatch.build.targets.wheel]
packages = ["mineproductivity_registry_fixture_broken"]
